--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,9 +58,29 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
   <script>
-    window.addEventListener('keydown', function (e) {
-      console.log(e.keyCode)
-    });
+
+    function playSound(e) {
+      // console.log(e.keyCode);
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+      // console.log(audio);
+      if (!audio) return; // to avoid error and have a nice code
+      audio.currentTime = 0; // to stop and restart the sound if it's already play
+      audio.play();
+      // console.log(key);
+      key.classList.add('playing');
+    }
+    
+    function removeTransition (e) {
+      if (e.propertyName !== 'transform') return;
+      console.log(this);
+      this.classList.remove('playing');
+    }
+    
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+    window.addEventListener('keydown', playSound);
+
   </script>
 
 
