--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,41 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%; /* to rotate from the center */
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.5, 0.5, 1);
     }
 
   </style>
 
-  <script>
 
+<script>
 
-  </script>
+  const secondHand = document.querySelector('.second-hand');
+  const minHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+
+  function setDate() {
+    const now = new Date()
+    const seconds = now.getSeconds();
+    console.log(seconds);
+    const secondsDegrees = ((seconds * 360) / 60) + 90;
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`
+
+    const minutes = now.getMinutes();
+    console.log(minutes);
+    const minutesDegrees = ((minutes * 360) / 60) + 90;
+    minHand.style.transform = `rotate(${minutesDegrees}deg)`
+
+    const hours = now.getHours();
+    console.log(hours);
+    const hoursDegrees = ((hours * 360) / 12) + 90;
+    hourHand.style.transform = `rotate(${hoursDegrees}deg)`
+  }
+
+  setInterval(setDate, 1000);
+
+</script>
 </body>
 </html>
